# Spaceman

./: Cargo.toml  README.md
.github/workflows/: sourcehut-mirror.yaml
src/: app.rs  args.rs  error.rs  main.rs
src/core/: file_entry.rs  mod.rs  scanner.rs
src/ui/: layout.rs  mod.rs  terminal.rs  widgets.rs
src/utils/: formatting.rs  mod.rs
