[package]
name = "spaceman"
version = "1.2.0"
edition = "2024"

[[bin]]
name = "sm"
path = "src/main.rs"

[dependencies]
walkdir = "2.4"
filesize = "0.2"
rayon = "1.8"
clap = { version = "4.4", features = ["derive"] }
ratatui = "0.24"
crossterm = "0.27"
thiserror = "1.0"
anyhow = "1.0"
open = "5.0"
